--- a/Release_Notes.html
+++ b/Release_Notes.html
@@ -21,86 +21,104 @@
 <div class="row">
 <div class="col-sm-12 col-lg-4">
 <center>
-<h1 id="release-notes-for-mx25lm51245g-component-driver">Release Notes for <mark>MX25LM51245G</mark> Component Driver</h1>
-<p>Copyright © 2020 STMicroelectronics<br />
+<h1 id="release-notes-for">Release Notes for</h1>
+<h1 id="mx25lm51245g-component-driver"><mark>MX25LM51245G Component Driver </mark></h1>
+<p>Copyright © 2017-2023 STMicroelectronics<br />
 </p>
 <a href="https://www.st.com" class="logo"><img src="_htmresc/st_logo_2020.png" alt="ST logo" /></a>
 </center>
-<h1 id="license">License</h1>
-This software component is licensed by ST under BSD 3-Clause license, the “License”; You may not use this component except in compliance with the License. You may obtain a copy of the License at:
-<center>
-<a href="https://opensource.org/licenses/BSD-3-Clause">https://opensource.org/licenses/BSD-3-Clause</a>
-</center>
 <h1 id="purpose">Purpose</h1>
-<p>This driver provides a set of audio functions offered by MX25LM51245G OCTOSPI component</p>
+<p>This driver provides a set of functions offered by MX25LM51245G OCTOSPI component</p>
 </div>
 <div class="col-sm-12 col-lg-8">
 <h1 id="update-history">Update History</h1>
 <div class="collapse">
-<input type="checkbox" id="collapse-section8" checked aria-hidden="true"> <label for="collapse-section8" aria-hidden="true"><strong>V2.0.6 / 04-May-2021</strong></label>
+<input type="checkbox" id="collapse-section11" checked aria-hidden="true"> <label for="collapse-section11" aria-hidden="true"><strong>V2.0.9 / 13-December-2023</strong></label>
 <div>
 <h2 id="main-changes">Main Changes</h2>
 <ul>
+<li>Update license</li>
+<li>Fix spelling errors</li>
+</ul>
+</div>
+</div>
+<div class="collapse">
+<input type="checkbox" id="collapse-section10" aria-hidden="true"> <label for="collapse-section10" aria-hidden="true"><strong>V2.0.8 / 01-February-2022</strong></label>
+<div>
+<h2 id="main-changes-1">Main Changes</h2>
+<ul>
+<li>Update license</li>
+</ul>
+</div>
+</div>
+<div class="collapse">
+<input type="checkbox" id="collapse-section9" aria-hidden="true"> <label for="collapse-section9" aria-hidden="true"><strong>V2.0.7 / 24-December-2021</strong></label>
+<div>
+<h2 id="main-changes-2">Main Changes</h2>
+<ul>
+<li>Align command structure with HAL</li>
+</ul>
+</div>
+</div>
+<div class="collapse">
+<input type="checkbox" id="collapse-section8" aria-hidden="true"> <label for="collapse-section8" aria-hidden="true"><strong>V2.0.6 / 04-May-2021</strong></label>
+<div>
+<h2 id="main-changes-3">Main Changes</h2>
+<ul>
 <li>Fix spelling warnings</li>
 </ul>
-<h2 id="section"></h2>
 </div>
 </div>
 <div class="collapse">
 <input type="checkbox" id="collapse-section7" aria-hidden="true"> <label for="collapse-section7" aria-hidden="true"><strong>V2.0.5 / 31-December-2020</strong></label>
 <div>
-<h2 id="main-changes-1">Main Changes</h2>
+<h2 id="main-changes-4">Main Changes</h2>
 <ul>
 <li>Check Misra-C 2012 coding rules compliance</li>
 <li>Formatting update</li>
 </ul>
-<h2 id="section-1"></h2>
 </div>
 </div>
 <div class="collapse">
 <input type="checkbox" id="collapse-section6"  aria-hidden="true"> <label for="collapse-section6" aria-hidden="true"><strong>V2.0.4 / 24-Juin-2020</strong></label>
 <div>
-<h2 id="main-changes-2">Main Changes</h2>
+<h2 id="main-changes-5">Main Changes</h2>
 <ul>
-<li>Codespell miss-spelling errors correction.</li>
+<li>Code spell miss-spelling errors correction.</li>
 </ul>
-<h2 id="section-2"></h2>
 </div>
 </div>
 <div class="collapse">
 <input type="checkbox" id="collapse-section5"  aria-hidden="true"> <label for="collapse-section5" aria-hidden="true"><strong>V2.0.3 / 27-March-2020</strong></label>
 <div>
-<h2 id="main-changes-3">Main Changes</h2>
+<h2 id="main-changes-6">Main Changes</h2>
 <ul>
 <li>Update mx25lm51245g.c so that, based on MSEL bit definition in OCTOSPI_CR register, resort to <em>s_command.FlashSelect</em> instead of <em>s_command.FlashId</em>.</li>
 </ul>
-<h2 id="section-3"></h2>
 </div>
 </div>
 <div class="collapse">
 <input type="checkbox" id="collapse-section4" aria-hidden="true"> <label for="collapse-section4" aria-hidden="true"><strong>V2.0.2 / 05-February-2020</strong></label>
 <div>
-<h2 id="main-changes-4">Main Changes</h2>
+<h2 id="main-changes-7">Main Changes</h2>
 <ul>
-<li>Minor chanage to fix misra warnings</li>
+<li>Minor change to fix misra warnings</li>
 </ul>
-<h2 id="section-4"></h2>
 </div>
 </div>
 <div class="collapse">
 <input type="checkbox" id="collapse-section3" aria-hidden="true"> <label for="collapse-section3" aria-hidden="true"><strong>V2.0.1 / 15-November-2019</strong></label>
 <div>
-<h2 id="main-changes-5">Main Changes</h2>
+<h2 id="main-changes-8">Main Changes</h2>
 <ul>
-<li>Minor chanage on mx25lm51245g.h driver</li>
+<li>Minor change on mx25lm51245g.h driver</li>
 </ul>
-<h2 id="section-5"></h2>
 </div>
 </div>
 <div class="collapse">
 <input type="checkbox" id="collapse-section2" aria-hidden="true"> <label for="collapse-section2" aria-hidden="true"><strong>V2.0.0 / 30-October-2019</strong></label>
 <div>
-<h2 id="main-changes-6">Main Changes</h2>
+<h2 id="main-changes-9">Main Changes</h2>
 <ul>
 <li>First Official Release of MX25LM51245G octal SPI Component drivers in line with STM32Cube BSP drivers development guidelines (UM2298)</li>
 <li>The component drivers are composed of
@@ -110,17 +128,18 @@ This software component is licensed by ST under BSD 3-Clause license, the “Lic
 </ul></li>
 </ul>
 <h2 id="backward-compatibility">Backward Compatibility</h2>
-<p>This version breaks the compatibility with previous versions</p>
+<ul>
+<li>This version breaks the compatibility with previous versions</li>
+</ul>
 </div>
 </div>
 <div class="collapse">
 <input type="checkbox" id="collapse-section1" aria-hidden="true"> <label for="collapse-section1" aria-hidden="true"><strong>V1.0.0 / 07-August-2017</strong></label>
 <div>
-<h2 id="main-changes-7">Main Changes</h2>
+<h2 id="main-changes-10">Main Changes</h2>
 <ul>
 <li>First official release of <strong>MX25LM51245G</strong> octal SPI driver</li>
 </ul>
-<h2 id="section-6"></h2>
 </div>
 </div>
 </div>
